--- a/config/ae_lstm/ae_lstm_4.yaml
+++ b/config/ae_lstm/ae_lstm_4.yaml
@@ -1,20 +1,21 @@
-base_dir: log/cnn_lstm_attention/
+base_dir: log/ae_lstm_4/
 data:
   batch_size: 200
-  dataset: data/cnn_lstm_attention/taiwan.csv
+  dataset: data/ae_lstm/taiwan.csv
   test_batch_size: 1
   test_size: 0.2
   valid_size: 0.2
 log_level: INFO
 model:
-  rnn_units: 100
+  rnn_units: 50
   activation: relu
   input_dim: 6
   output_dim: 1
-  seq_len: 12
+  seq_len: 48
   horizon: 1
+  timestep: 4
 train:
-  dropout: 0
+  dropout: 0.5
   epochs: 300
   optimizer: adam
   patience: 300
