--- a/config/ae_lstm_ga/ae_lstm_6.yaml
+++ b/config/ae_lstm_ga/ae_lstm_6.yaml
@@ -1,7 +1,7 @@
-base_dir: log/ae_lstm_4/
+base_dir: log/ae_lstm_6_ga/
 data:
   batch_size: 200
-  dataset: data/ae_lstm/taiwan.csv
+  dataset: data/ae_lstm/hanoi.csv
   test_batch_size: 1
   test_size: 0.2
   valid_size: 0.2
@@ -13,7 +13,7 @@ model:
   output_dim: 1
   seq_len: 72
   horizon: 1
-  timestep: 4
+  timestep: 6
 train:
   dropout: 0.5
   epochs: 300
