--- a/config/ae_lstm_ga/ae.yaml
+++ b/config/ae_lstm_ga/ae.yaml
@@ -1,4 +1,4 @@
-base_dir: log/ae_lstm_ga/
+base_dir: log/ae_lstm_ga/ae/
 data:
   batch_size: 200
   dataset: data/ae_lstm/hanoi.csv
@@ -7,17 +7,16 @@ data:
   valid_size: 0.2
 log_level: INFO
 model:
+  rnn_units: 50
   activation: relu
-  horizon: 1
   input_dim: 6
   output_dim: 1
-  rnn_units: 50
   seq_len: 48
+  horizon: 1
   timestep: 6
 train:
   dropout: 0.5
   epochs: 300
-  log_dir: log/ae_lstm_ga/default/
-  loss: mse
   optimizer: adam
   patience: 300
+  loss: mse
