--- a/config/ae_lstm/ae.yaml
+++ b/config/ae_lstm/ae.yaml
@@ -1,7 +1,7 @@
 base_dir: log/ae_lstm_ga/ae/
 data:
   batch_size: 200
-  dataset: data/ae_lstm/hanoi.csv
+  dataset: data/ae_lstm/taiwan.csv
   test_batch_size: 1
   test_size: 0.2
   valid_size: 0.2
@@ -9,7 +9,7 @@ log_level: INFO
 model:
   rnn_units: 50
   activation: relu
-  input_dim: 14
+  input_dim: 6
   output_dim: 1
   seq_len: 48
   horizon: 1
